newest networks, added mean, median degree and size of network

--- a/Notebooks/Networks.ipynb
+++ b/Notebooks/Networks.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -179,15 +179,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of nodes in the network is: 4512\n",
+      "The number of edges in the network is: 36061\n"
+     ]
+    }
+   ],
+   "source": [
+    "#The size of the network\n",
+    "print \"The number of nodes in the network is: {}\".format(len(G_movies_cast.nodes()))\n",
+    "print \"The number of edges in the network is: {}\".format(len(G_movies_cast.edges()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Maximum and minimum degree"
+    "### Maximum, minimum, median and mean degree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -195,14 +215,18 @@
      "output_type": "stream",
      "text": [
       "The minimum degree of the network is: 1\n",
-      "The maximum degree of the network is: 190\n"
+      "The maximum degree of the network is: 190\n",
+      "The median degree of the network is: 11.0\n",
+      "The mean degree of the network is: 15.9844858156\n"
      ]
     }
    ],
    "source": [
     "# Find the maximum and minimum degree of the network\n",
     "print \"The minimum degree of the network is: {}\".format(min(G_movies_cast.degree().values()))\n",
-    "print \"The maximum degree of the network is: {}\".format(max(G_movies_cast.degree().values()))"
+    "print \"The maximum degree of the network is: {}\".format(max(G_movies_cast.degree().values()))\n",
+    "print \"The median degree of the network is: {}\".format(np.median(G_movies_cast.degree().values()))\n",
+    "print \"The mean degree of the network is: {}\".format(np.mean(G_movies_cast.degree().values()))"
    ]
   },
   {
@@ -353,7 +377,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# plot the network\n",
@@ -763,15 +789,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of nodes in the network is: 608\n",
+      "The number of edges in the network is: 6264\n"
+     ]
+    }
+   ],
+   "source": [
+    "#The size of the network\n",
+    "print \"The number of nodes in the network is: {}\".format(len(G_movies_keywords.nodes()))\n",
+    "print \"The number of edges in the network is: {}\".format(len(G_movies_keywords.edges()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Maximum and minimum degree"
+    "### Maximum, minimum, median and mean degree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -779,14 +825,18 @@
      "output_type": "stream",
      "text": [
       "The minimum degree of the network is: 1\n",
-      "The maximum degree of the network is: 117\n"
+      "The maximum degree of the network is: 117\n",
+      "The median degree of the network is: 3.0\n",
+      "The mean degree of the network is: 20.6052631579\n"
      ]
     }
    ],
    "source": [
     "# Find the maximum and minimum degree of the network\n",
     "print \"The minimum degree of the network is: {}\".format(min(G_movies_keywords.degree().values()))\n",
-    "print \"The maximum degree of the network is: {}\".format(max(G_movies_keywords.degree().values()))"
+    "print \"The maximum degree of the network is: {}\".format(max(G_movies_keywords.degree().values()))\n",
+    "print \"The median degree of the network is: {}\".format(np.median(G_movies_keywords.degree().values()))\n",
+    "print \"The mean degree of the network is: {}\".format(np.mean(G_movies_keywords.degree().values()))"
    ]
   },
   {
@@ -1294,7 +1344,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Lets build the network\n",
@@ -1331,15 +1383,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of nodes in the network is: 556\n",
+      "The number of edges in the network is: 1311\n"
+     ]
+    }
+   ],
+   "source": [
+    "#The size of the network\n",
+    "print \"The number of nodes in the network is: {}\".format(len(G_cast.nodes()))\n",
+    "print \"The number of edges in the network is: {}\".format(len(G_cast.edges()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Maximum and minimum degree"
+    "### Maximum, minimum, median and mean degree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1347,14 +1419,18 @@
      "output_type": "stream",
      "text": [
       "The minimum degree of the network is: 1\n",
-      "The maximum degree of the network is: 30\n"
+      "The maximum degree of the network is: 30\n",
+      "The median degree of the network is: 2.0\n",
+      "The mean degree of the network is: 4.71582733813\n"
      ]
     }
    ],
    "source": [
     "# Find the maximum and minimum degree of the network\n",
     "print \"The minimum degree of the network is: {}\".format(min(G_cast.degree().values()))\n",
-    "print \"The maximum degree of the network is: {}\".format(max(G_cast.degree().values()))"
+    "print \"The maximum degree of the network is: {}\".format(max(G_cast.degree().values()))\n",
+    "print \"The median degree of the network is: {}\".format(np.median(G_cast.degree().values()))\n",
+    "print \"The mean degree of the network is: {}\".format(np.mean(G_cast.degree().values()))"
    ]
   },
   {
