--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -300,7 +300,9 @@
    "source": [
     "# References\n",
     "\n",
-    "https://en.wikipedia.org/wiki/Tf%E2%80%93idf"
+    "https://en.wikipedia.org/wiki/Tf%E2%80%93idf\n",
+    "\n",
+    "http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2"
    ]
   },
   {
@@ -326,22 +328,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:py35]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-py35-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
