GAG network overview

--- a/Notebooks/Networks.ipynb
+++ b/Notebooks/Networks.ipynb
@@ -84,26 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "IOError",
-     "evalue": "[Errno 2] No such file or directory: 'tmdb_5000_credits.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-795c6c615c5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtmdb_5000_credits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdefaultdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDictReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'tmdb_5000_credits.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
-    "filepath = r\"tmdb_5000_credits.csv\"\n",
+    "filepath = \"/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/tmdb-5000-movie-dataset/tmdb_5000_credits.csv\"\n",
     "tmdb_5000_credits = defaultdict(dict)\n",
     "\n",
     "with open(filepath) as csvfile:\n",
@@ -117,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
-    "filepath = r\"tmdb_5000_movies.csv\"\n",
+    "filepath = \"/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/tmdb-5000-movie-dataset/tmdb_5000_movies.csv\"\n",
     "tmdb_5000_movies = defaultdict(dict)\n",
     "\n",
     "with open(filepath) as csvfile:\n",
@@ -386,7 +374,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see the degree distribution follows a power law distribution, this tells us that this is a scale-free network."
+    "As we can see the degree distribution follows a power law distribution, this tells us that this is a scale-free network. To understand what this is telling us we need to know what scale free network means. A scale free network is a network that contains hubs, hub is a node with an exceptionally large number of links, the scale free networks also has a large number of small degree nodes. This is the main difference between scale free network and a random network. In a random network most nodes have comparable degrees and hence hubs are forbidden and furthermore small degree nodes are mostly of absent in a random network.\n",
+    "\n",
+    "Therefore it can be seen that there are hubs in this network meaning that there are small number of movies that has cast members that have starred in many movies. There are also many movies that movies that have cast members that don't appear in many movies which is understandable because the dataset spans movies from over 100 years and the dataset also contains movies from multiple countries but the vast majority is from USA."
    ]
   },
   {
@@ -1020,7 +1010,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This degree distribution doesn't follow a power law distribution and is therefore not a scale-free network."
+    "This degree distribution does not seem to follow the power law distribution exactly and therefore it can not strictly be considered as a scale-free network. However, it can be seen that the degree distribution is not at all like the Poission distribution and therefore it is not a random network. The degree distribution has some characteristics of a scale free network, there are hubs in the network and most of the nodes have small degree values. \n",
+    "\n",
+    "The hubs in the network are most likely movies that have few keywords and the keywords are quite general, however most of the nodes(movies) have few links to other movies meaning that most of the movies are only linked to few other movies. This fact could be used in our recommendation engine, we could recommend the movies that link to each other. This would however not be a really good recommendation but could definately be a variable into our recommendation engine."
    ]
   },
   {
@@ -1210,7 +1202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These communities look a bit better than the communities of the movie network derived from the cast, that is when compared to genres. Here we have a relation between communities and genres. Communities 0,2,4 and 7 contain a lot of romantic movies although with different subgenres. Community 1 is rather divided and seems to contain some foreign films, which can explain the division as foreign films can be of all genres. Community 3 contains Adventur movies, a lot superhero movies for example. Community 5 only contains christmas movies and is extremely high in the Family genre. Community 6 contains mostly animated films, of which many are considered to Family movies. Community 8 is high in Music and Fantasty. Community 9 is high in Horror and Adventure, although it only contains two movies so there isn't much to say about that. Community 10 is high in Crime and Romance. It should be noted that communities 7-10 only contained 2-4 films each."
+    "These communities look a bit better than the communities of the movie network derived from the cast, that is when compared to genres. Here we have a relation between communities and genres. Communities 0,2,4 and 7 contain a lot of romantic movies although with different subgenres. Community 1 is rather divided and seems to contain some foreign films, which can explain the division as foreign films can be of all genres. Community 3 contains Adventure movies, a lot superhero movies for example. Community 5 only contains christmas movies and is extremely high in the Family genre. Community 6 contains mostly animated films, of which many are considered to Family movies. Community 8 is high in Music and Fantasty. Community 9 is high in Horror and Adventure, although it only contains two movies so there isn't much to say about that. Community 10 is high in Crime and Romance. It should be noted that communities 7-10 only contained 2-4 films each."
    ]
   },
   {
@@ -1648,7 +1640,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This distribution follows a power law and therefore we can say that this network is scale-free."
+    "This distribution follows a power law and therefore we can say that this network is scale-free. Therefore it can be seen that there are hubs in this network meaning that there are small number of cast members that are hubs in the network, these cast members have starred in many movies that likely have a big cast, we have seen in our previous analysis that there is a correlation between the size of the cast of a movie and the revenue of a movie. Therefore these cast members have most likely starred in couple of big/successful movies. However most of the nodes have few degrees like could have been expected, like we have mentioned above the dataset has movies that span 100 years (most of the movies from recent years) and we also know that many cast members are not well known and are not part of many successful movies. Proven cast members are most often used by movie producers (in big/successful movies) rather than betting on new faces.  \n",
+    "\n"
    ]
   },
   {
