--- a/Notebooks/Networks.ipynb
+++ b/Notebooks/Networks.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
-    "filepath = \"/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/tmdb-5000-movie-dataset/tmdb_5000_credits.csv\"\n",
+    "filepath = r\"tmdb_5000_credits.csv\"\n",
     "tmdb_5000_credits = defaultdict(dict)\n",
     "\n",
     "with open(filepath) as csvfile:\n",
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
-    "filepath = \"/Users/GretarAtli/Dropbox/SocialGraph/FinalProject/Data/tmdb-5000-movie-dataset/tmdb_5000_movies.csv\"\n",
+    "filepath = r\"tmdb_5000_movies.csv\"\n",
     "tmdb_5000_movies = defaultdict(dict)\n",
     "\n",
     "with open(filepath) as csvfile:\n",
@@ -1640,8 +1640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This distribution follows a power law and therefore we can say that this network is scale-free. Therefore it can be seen that there are hubs in this network meaning that there are small number of cast members that are hubs in the network, these cast members have starred in many movies that likely have a big cast, we have seen in our previous analysis that there is a correlation between the size of the cast of a movie and the revenue of a movie. Therefore these cast members have most likely starred in couple of big/successful movies. However most of the nodes have few degrees like could have been expected, like we have mentioned above the dataset has movies that span 100 years (most of the movies from recent years) and we also know that many cast members are not well known and are not part of many successful movies. Proven cast members are most often used by movie producers (in big/successful movies) rather than betting on new faces.  \n",
-    "\n"
+    "This distribution follows a power law and therefore we can say that this network is scale-free. Therefore it can be seen that there are hubs in this network meaning that there are small number of cast members that are hubs in the network, these cast members have starred in many movies that likely have a big cast, we have seen in our previous analysis that there is a correlation between the size of the cast of a movie and the revenue of a movie. Therefore these cast members have most likely starred in couple of big/successful movies. However most of the nodes have few degrees like could have been expected, like we have mentioned above the dataset has movies that span 100 years (most of the movies from recent years) and we also know that many cast members are not well known and are not part of many successful movies. Proven cast members are most often used by movie producers in big budget movies rather than betting on new faces.  "
    ]
   },
   {
@@ -2033,7 +2032,7 @@
    },
    "source": [
     "## Networks Conclusion\n",
-    "None of these networks will suffice by themselves for our recommendation engine. We will therefor make a network that is a mix of many different properties. That network will be crafted in a notebook of it's own as the code is quite long."
+    "None of these networks will suffice by themselves for our recommendation engine. We will therefore make a network that is a mix of many different properties. That network will be crafted in a notebook of it's own as the code is quite long."
    ]
   }
  ],
