Explanatory as good as ready....

--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -227,37 +227,72 @@
     "\n",
     "### The idea\n",
     "\n",
-    "**TODO**\n",
+    "Here we will analyze three networks:\n",
+    "* __Movie network(cast):__ This is a network where nodes will be movies and there will be a link between nodes if 10% of the cast is the same between the two nodes(movies).\n",
+    "* __Movie network(keywords):__ This is a network where nodes will be movies and there will be a link between nodes if the movies share 30% of their keywords. Keywords are used to describe the movie in simple words such as for Avatar the keywords are: culture clash, future, space war, society, futuristic, romance, space, etc.\n",
+    "* __Cast network:__ This is a network where nodes will be cast members from our movies and there will be a link between nodes if the cast members have starred in three or more movies together.\n",
+    "\n",
+    "For all networks we will look at the following:\n",
+    "* What's the maximum and minimum degree?\n",
+    "* How is the degree distribution?\n",
+    "* Visualize the networks.\n",
+    "* Analyze Python-Louvain communities and modularity.\n",
+    "* Look at betweenness centrality.\n",
+    "* Look at clustering coefficients.\n",
+    "\n",
+    "The end goal is to find a network that we would be satisfied with using as the network for our recommendation engine.\n",
     "\n",
     "### Tools\n",
     "\n",
-    "**TODO**\n",
+    "**Betweenness centrality: ** In a traditional setting, this measure calculates all shortest paths in the network and then each node gets a score according to which fraction of all shortest paths pass through that node. By calculating the betweenness centrality in our network we can find the biggest hubs.\n",
+    "**Degree distribution: ** Is the probability that a randomly chosen node has a certain degree. In a given realization of a random network some nodes gain numerous links, while others acquire only a few or no links. By looking at the degree distribution we can get an idea of how the network is structured. For example is it scale-free or perhaps a random network. There is more on degree distribution in [Network Science Book](http://barabasi.com/networksciencebook/chapter/3#degree-distribution).\n",
+    "**Clustering coefficient: ** The degree of a node contains no information about the relationship between a node's neighbors. Do they all know each other, or are they perhaps isolated from each other? The answer is provided by the local clustering coefficient Ci, that measures the density of links in node i’s immediate neighborhood: Ci = 0 means that there are no links between i’s neighbors; Ci = 1 implies that each of the i’s neighbors link to each other. From [Network Science Book](http://barabasi.com/networksciencebook/chapter/3#clustering-3-9).\n",
     "\n",
     "### Applications\n",
     "\n",
-    "**TODO**\n",
+    "** Networks ** - [Networks notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/Networks.ipynb)\n",
     "\n",
     "### Outcome\n",
     "\n",
-    "**TODO**\n",
+    "None of these networks will suffice by themselves for our recommendation engine. We will therefore make a network that is a mix of many different properties. That network will be crafted in a notebook of it's own as the code is quite long. We will discuss said network below in the section 'Recommendation Engine'.\n",
     "\n",
     "## Recommendation Engine\n",
     "\n",
-    "**TODO**\n",
-    "\n",
     "### The idea\n",
     "\n",
-    "**TODO**\n",
+    "The main network is build upon our analysis on simpler networks. The first three networks we tried did not yield the desired result so now we are going to merge them together to try and make a smart recommendation engine.\n",
+    "\n",
+    "The idea is that a user inputs a name of a movie (node) and from that movie (node) we find all the shortest distances in our network and recommend those movies (nodes) wich are closest in the network. It was decided to use a number of things to build this network, in the pursuit to make as good a recommendation engine as possible. \n",
+    "\n",
+    "For the network we will look at the following:\n",
+    "* What's the maximum and minimum degree?\n",
+    "* How is the degree distribution?\n",
+    "* Visualize the networks.\n",
+    "* Analyze Python-Louvain communities and modularity.\n",
+    "* Look at betweenness centrality.\n",
+    "* Look at clustering coefficients.\n",
     "\n",
     "### Tools\n",
     "\n",
-    "**TODO**\n",
+    "Here we used the same tools as in the 'Networks' section with the addition of **Djikstra shortest path** and **TF-IDF**.\n",
+    "\n",
+    "**Betweenness centrality: ** In a traditional setting, this measure calculates all shortest paths in the network and then each node gets a score according to which fraction of all shortest paths pass through that node. By calculating the betweenness centrality in our network we can find the biggest hubs.\n",
+    "**Degree distribution: ** Is the probability that a randomly chosen node has a certain degree. In a given realization of a random network some nodes gain numerous links, while others acquire only a few or no links. By looking at the degree distribution we can get an idea of how the network is structured. For example is it scale-free or perhaps a random network. There is more on degree distribution in [Network Science Book](http://barabasi.com/networksciencebook/chapter/3#degree-distribution).\n",
+    "**Clustering coefficient: ** The degree of a node contains no information about the relationship between a node's neighbors. Do they all know each other, or are they perhaps isolated from each other? The answer is provided by the local clustering coefficient Ci, that measures the density of links in node i’s immediate neighborhood: Ci = 0 means that there are no links between i’s neighbors; Ci = 1 implies that each of the i’s neighbors link to each other. From [Network Science Book](http://barabasi.com/networksciencebook/chapter/3#clustering-3-9).\n",
+    "**Djikstra shortest path: ** The algorithm creates a tree of shortest paths from the starting vertex, the source, to all other points in the graph.\n",
+    "**TF-IDF: ** The TF-IDF (Term Frequency - Inverse Document Frequency) is a numerical statistic of how important a word is to a document in a collection or a corpus. It is calculated by calculating the frequency of occurrences of a word in a text multiplied with the inverse document frequency which gives lower scores to words that frequently occur in other texts in the corpus as well. In other words, TF-IDF is an indicator of how important/special a word is actually in a text, giving high scores to the words that differentiates it from other texts. We calculated the TF-IDF for each movie's **IMDb storyline**. We the used the resulting vectors to calculate the cosine similarity measurement between the movie's storyline and we used that as a variable into our recommendation engine.\n",
     "\n",
     "### Applications\n",
     "\n",
-    "**TODO**\n",
+    "We decided to implement a weighted network, since nodes which are connected can have different importance. For example, if we have some movie, lets say 'Iron Man', our network can  have multiple links from that movie. However, these movies (nodes) it links to are not all equally similar to 'Iron Man', and thus we add a weight to the edge. Lastly a movie with few edges can be similar to some movies which are not connected to them directly, but there might be a short path in the network which connects them. \n",
     "\n",
-    "### Outcome "
+    "In order for making a link in the network, some similarities between the movies (nodes) must exist. It was decided that what mattered in order to make a link between the networks was the number of common: keywords, genres, actors/actresses and directors. In addition to that we looked at IMDb ratings and how similar the storylines of movies are.\n",
+    "\n",
+    "** Recommendation Engine ** - [recommendation_engine notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/recommendation_engine.ipynb)\n",
+    "\n",
+    "### Outcome \n",
+    "\n",
+    "The result actually exceeded our expectations, we were really happy with the end product and we'll definitely be using this engine in the x-mas break. This part was mainly focused on putting together bit and pieces from our previous work, we spent some time on deciding the importance of the different properties of the movies and this was done mainly through trial-and-error. We'll further reflect on the outcome in the 'Discussion' section below."
    ]
   },
   {
@@ -267,7 +302,7 @@
     "# Discussion\n",
     "\n",
     "\n",
-    "We are all huge movie fans and therefore we had a lot of fun doing this project. We did a lot of analysis on the data set like you have probably noticed. We are quite happy about our findings and we are really proud of the final version of the recommendation engine. The recommendation engine is functioning quite well and we'll definitely be using it ourselves during the Christmas break when looking for movies to watch and we encourage you to try it out on the website.\n",
+    "We are all huge movie fans and therefore we had a lot of fun doing this project. We did a lot of analysis on the data set like you have probably noticed. We are quite happy about our findings and we are really proud of the final version of the recommendation engine. The recommendation engine is functioning quite well and we'll definitely be using it ourselves during the x-mas break when looking for movies to watch and we encourage you to try it out on the website.\n",
     "\n",
     "Although it turned out great we tried quite a lot of different things before we were satisfied. For the network part we looked at three different networks. We created a network where movies were connected if they shared a certain percentage of their keywords. We did the same for genres as well as one network where nodes were cast members and nodes were linked if the cast members had starred together in a certain number of movies. After analyzing each of the networks we decided that none of them were good enough. This resulted in us creating a fourth network which would combine the properties of the previous three. Movies were nodes and to create links to other movies we looked at multiple properties e.g. cast members, keywords, genres, directors and similarities in story line. After links have been created and we’re in the process of recommending we also look at IMDb ratings. \n",
     "\n",
@@ -291,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "############################################################################################################"
+    "###############################################################################################################################"
    ]
   },
   {
@@ -304,47 +339,26 @@
     "\n",
     "http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "**Tala um þetta seinna**\n",
-    "\n",
-    "It was clear to us that we where not able to use this in our recommendation engine because we did not have information about each movie in the dataset. We still manage to get manuscripts for 715 movies in our dataset and we decided to analyse these manuscript thoroughly with the goal of finding out if we could use these \n",
-    "\n",
-    "\n",
-    "***Grétar, hvernig sóttiru scripts???***.  This was a problem as we didn’t want to make a recommendation engine that only contained a bit more than a 1.000 movies. We however did a thorough analysis of the scripts to make a proof of concept that it could’ve been used as input into our recommendation engine. We after that decided to get more text data. We thought about what we could use other than scripts and reviews to try and find similarities between movies and ended up with trying to use the movie’s storyline. This was data we didn’t have, so once again we turned to scraping. We had the help of a library called ‘beautifulsoup’. After this we finally had some nice juicy text to use in our engine.\n",
-    "\n",
-    "The end goal was a movie recommendation engine where a user could write in a movie and we would recommend similar movies the user might like. We wanted to function quite well and even use it ourselves. We’ve all spent a lot of time in our lives trying to decide on a movie to watch. The recommendation engine will use shortest path calculations on a network that we design. There will be multiple things affecting the links between movies, e.g. cast of movies, keywords, genres, directors, IMDb ratings and similarities in storylines. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py35]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py35-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
