--- a/Notebooks/recommendation_engine.ipynb
+++ b/Notebooks/recommendation_engine.ipynb
@@ -12,9 +12,14 @@
    "metadata": {},
    "source": [
     "### Making the network\n",
-    "The main network is build upon our analysis on simpler networks. The first three networks we tried did not yield the desired result so now we are going to merge them together to try and make a smart recommendation engine.\n",
+    "The main network is build upon our analysis on simpler networks, the basic statistics and the text analysis. The first three networks we tried did not yield the desired result so now we are going to merge them together and add some additional information in order to make a smart recommendation engine.\n",
     "\n",
-    "In order for making a link in the network, some similarities between the movies (nodes) must exist. It was decided that what mattered in order to make a link between the networks was the number of common: keywords, genres, actors/actresses and directors. In addition to that we looked at IMDb ratings and how similar the storylines of movies are."
+    "In order to make a link in the network, some similarities between the movies (nodes) must exist. It was decided that what mattered in order to make a link between the networks was: \n",
+    " - A ratio of common keywords \n",
+    " - A ratio of common genres\n",
+    " - A ratio of common actors/actresses\n",
+    " - A ratio of common directors (most often takes the value 0 or 1)\n",
+    " - In addition to that we looked at IMDb ratings and how similar the storylines of movies are."
    ]
   },
   {
@@ -39,9 +44,7 @@
     "\n",
     "We decided to make a network on which to base our recommendation engine. The idea is that a user inputs a name of a movie (node) and from that movie (node) we find all the shortest distances in our network and recommend those movies (nodes) wich are closest in the network. It was decided to use a number of things to build this network, in the pursuit to make as good a recommendation engine as possible. \n",
     "\n",
-    "We decided to implement a weighted network, since nodes which are connected can have different importance. For example, if we have some movie, lets say 'Iron Man', our network can  have multiple links from that movie. However, these movies (nodes) it links to are not all equally similar to 'Iron Man', and thus we add a weight to the edge. Lastly a movie with few edges can be similar to some movies which are not connected to them directly, but there might be a short path in the network which connects them. \n",
-    "\n",
-    "    "
+    "We decided to implement a weighted network, since nodes which are connected can have different importance. For example, if we have some movie, lets say 'Iron Man', our network can  have multiple links from that movie. However, these movies (nodes) it links to are not all equally similar to 'Iron Man', and thus we add a weight to the edge. Lastly a movie with few edges can be similar to some movies which are not connected to them directly, but there might be a short path in the network which connects them.     "
    ]
   },
   {
@@ -222,9 +225,15 @@
    "source": [
     "### Building the Network\n",
     "\n",
-    "When making the network various decisions regarding what constraints needed to be fulfilled to make an edge and what the weight of that edge should be. We start the discussion on the constraints. The constraints build upon four dimensions: genre, keywords, actors and director. All of these things are calculated in a similar fashion. We find all the common things in both movies, be it genres, keywords, actors or directors and then normalize it by dividing by the movie which has less items in each dimension. Each of these values are then multiplied by an importance coefficent, and if the total sum of the dimension varibles multiplied by the importance coefficent is more than 0.3 we make an edge. The value of the importance was choosen by guesswork and trial-and-error. Since there is no correct answer to which movies you recommend we tweaked it until we were happy with the results generated. There were some things we kept in mind though. Firstly, note that the sum of the dimension varibles can at maximum have the value of 1. Next when looking at the importance coefficent, one can observe that none of them has a value greater than 0.3. This foreces our network to make a connection only if at least two dimension variables are shared. Next when assigning a weight to the edge we subtract both the sum of the varibles which sastisfied the constraint and the similarities between the movies with 1. This way, movies that have similar keywords, genre, actors, directors and storylines are closer in the network. Note that we use the similarity between storylines only in deciding on the weight of the edge.\n",
-    " The reason for this is that altough the movies might have similar storylines the movies could be very different. For example a romance and a horrors story might connect, depending in the language used in the storyline on IMDB. Furthermore, there exists only so few  [storylines]( https://en.wikipedia.org/wiki/The_Seven_Basic_Plots).\n",
-    " \n"
+    "When making the network various decisions regarding what constraints needed to be fulfilled to make an edge and what the weight of that edge should be. We start the discussion on the constraints. The constraints build upon four dimensions: genre, keywords, actors and director. All of these things are calculated in a similar fashion. We find all the common things in both movies, by their; genres, keywords, actors and directors and then we normalize it by dividing by the movie which has less items in each dimension. \n",
+    "\n",
+    "Each of these values are then multiplied by an importance coefficent, and if the total sum of the dimension varibles is more than 0.3 we make an edge. The value of the importance was choosen by guesswork and trial-and-error. Since there is no correct answer to which movies you recommend we tweaked it until we were happy with the results generated.\n",
+    "\n",
+    "There were some things we kept in mind though. Firstly, note that the sum of the dimension varibles can at maximum have the value of 1. Next when looking at the importance coefficent, one can observe that none of them has a value greater than 0.3. This forces our network to make a connection only if at least two dimension variables are shared. \n",
+    "\n",
+    "Next when assigning a weight to the edge we subtract both the sum of the varibles which satisfied the constraint and the similarities between the movies with 1. This way, movies that have similar keywords, genre, actors, directors and storylines are closer in the network. \n",
+    "\n",
+    "Note that we use the similarity between storylines only in deciding on the weight of the edge. The reason for this is that altough the movies might have similar storylines the movies could be very different. For example a romance and a horrors story might connect, depending on the language used in the storyline on IMDB. Furthermore, there exists only so few  [storylines]( https://en.wikipedia.org/wiki/The_Seven_Basic_Plots).\n"
    ]
   },
   {
@@ -345,7 +354,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -372,7 +383,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -403,7 +416,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -437,7 +452,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -502,7 +519,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -526,7 +545,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -560,7 +581,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -587,7 +610,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -612,7 +637,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -694,7 +721,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -744,7 +773,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -761,7 +792,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -785,7 +818,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1003,7 +1038,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -1017,7 +1052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
